Avoid event names overflowing and dates line breaking

--- a/frontend/src/css/calendar.css
+++ b/frontend/src/css/calendar.css
@@ -24,7 +24,7 @@
 }
 
 .cal-date {
-    width: 28vh;
+    width: 36vh;
     text-align: left;
     margin-left: 2vh;
     height: 100%;
